# jingshenDemo

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/gallery3d/sprd/com/refocus/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/arcsoft_realtime/: Android.mk  arcrealbokeh.cpp  arcrealbokeh.h  arcsoft_dualcam_common_refocus.h  arcsoft_dualcam_image_refocus.h  arcsoft_dualcam_video_refocus.h
app/src/main/java/com/sprd/gallery3d/refocusimage/: CommonRefocus.java  RefocusData.java  RefocusEditActivity.java  RefocusImageView.java  RefocusUtils.java
app/src/main/java/com/sprd/gallery3d/refocusimage/arcrealtime/: ArcRealBokeh.java  ArcRealBokehData.java  ArcRealBokehJpegData.java
app/src/main/java/gallery3d/sprd/com/refocus/: MainActivity.java
app/src/main/res/drawable/: btn_quit_selector.xml  btn_save_selector.xml  btn_undo_selector.xml  dream_seekbar_thumb_material_anim.xml  ic_refocus_redo.xml  ic_refocus_storage.xml  ic_refocus_undo_select.xml
app/src/main/res/layout/: activity_main.xml  refocus_bottom.xml
app/src/main/res/menu/: imgaeblending.xml  menu_scrolling.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/test/java/gallery3d/sprd/com/refocus/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
